--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,16 @@
 
 # misc
 .DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # IDE
 .idea/
