--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/vertexai": "^1.9.3",
+    "@google/generative-ai": "^0.21.0",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.10",
     "framer-motion": "^10.16.4",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1"
   },
