--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@google-cloud/vertexai": "^1.9.3",
     "@google/generative-ai": "^0.21.0",
     "@heroicons/react": "^2.0.18",
+    "firebase": "^11.6.0",
     "framer-motion": "^10.16.4",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.2.0",
